<resources>
    <string name="app_name">WalkWithMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="location_icon">Location Icon</string>
    <string name="pet_icon">Pet Icon</string>
    <string name="cake_icon">Cake Icon</string>
    <string name="waving_hand_icon">Waving hand icon</string>
    <string name="social_icon">Social icon</string>
    <string name="contact">Contact</string>
    <string name="dog_s_photo">Dog\'s photo</string>
</resources>